kube-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: laravel
  template:
    metadata:
      labels:
        app.kubernetes.io/name: laravel
    spec:
      volumes:
        - name: nginx-config
          configMap:
            name: laravel-nginx
      containers:
        - name: nginx
          image: nginx:1.26
          ports:
            - containerPort: 80
              protocol: TCP
              name: http
          volumeMounts:
            - name: nginx-config
              subPath: nginx.conf
              mountPath: /etc/nginx/nginx.conf
              readOnly: true
        - name: app
          image: us-central1-docker.pkg.dev/curso-gcp-420816/gke-deploy/laravel_gke_deploy:v9
          imagePullPolicy: Always
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1"
