kube-manifests/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: production
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
